--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/ezgif.com-gif-maker.gif" type="image/x-icon">
   <meta name="description" content="PACS & Teleradiology for Veterinary and Human segments. EthosMED’ revolutionary workflow infrastructure has been designed and developed using the expertise of radiologists, technicians, and PACS administrators.">
-  
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   
   <title>EthosMED  - Human & Veterinary PACS & Teleradiology Solutions</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
