--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/ezgif.com-gif-maker.gif" type="image/x-icon">
   <meta name="description" content="PACS & Teleradiology for Veterinary and Human segments. EthosMED’ revolutionary workflow infrastructure has been designed and developed using the expertise of radiologists, technicians, and PACS administrators.">
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-  
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">  
   <title>EthosMED  - Human & Veterinary PACS & Teleradiology Solutions</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
