--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="index.html#top"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content4-1e"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology Solutions</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features2-19"><span class="mbrib-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Our Clients</a></li>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content4-1e"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology Solutions</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features2-19"><span class="mbrib-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Our Clientele</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="contact.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a>
                 </li></ul>
@@ -176,9 +176,9 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Apvt4BpI2/NjzgUOSzJlTHyziwvZUwxrAH6COJ620AW0F8lPCQGK5ZXuALWkGWHK8spSB0LpEpNR6DP1bLGvNntkERc2hQpATIlgifvX38pR8lq49U7ynd/9SsyprtOP">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e2QgeYPuLY2hqAyA8WyYutBYyA4Pn6Gb6VWWT3MAkCVHiisTWSLeiFR+EmYsDh5MEw3oNOKqiXnqgs8Vppr9MIzEIl+v1SQ0tbpqQmzd1e5l9n/99AtbtbPsti4UhnvZ">
                         <div class="row">
-                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting us. We will get back to you shortly.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                             </div>
                         </div>
