--- a/contact.html
+++ b/contact.html
@@ -134,14 +134,14 @@
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <img src="assets/images/rana-asim-wajid-pic-300x394.webp" alt="" title="">
+              <img src="assets/images/raw-1-300x300.webp" alt="" title="">
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
             <div class="user_text ">
-              <p class="mbr-fonts-style display-7"><strong>Rana Asim Wajid (CEO)</strong><strong><br></strong>Worldwide<br>
+              <p class="mbr-fonts-style display-7"><strong>Rana Asim Wajid (Founder &amp; CEO)</strong><strong><br></strong>Worldwide<br>
 <br>A native of Pakistan. Rana Asim has more than a decade of experierience in the healthcare informatics domain. As the founder and Chief Executive Officer he has been responsible for making EthosMed a trusted name in the radiological imaging and teleradiology domain.<br>
-<br><strong>Email:</strong> rana.asim@ethosmed.com<br><strong>Language&nbsp;Proficiency:</strong> English, Urdu, Punjabi</p>
+<br><strong>Email:</strong> rana.asim@ethosmed.com<br></p>
             </div>
             
             
@@ -176,7 +176,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e2QgeYPuLY2hqAyA8WyYutBYyA4Pn6Gb6VWWT3MAkCVHiisTWSLeiFR+EmYsDh5MEw3oNOKqiXnqgs8Vppr9MIzEIl+v1SQ0tbpqQmzd1e5l9n/99AtbtbPsti4UhnvZ">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rXnmZZ7BOz5tkAJlm5TTbZjzEobTeQTAZ/R1gouD8A7Fsq1og322xARuhRSyJjGoap33QIU1cNNJ+cxQHhVt03CClGW0cgiuV5DCDVZCENL7jMObE3hM5CxAcG+KLaac">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting us. We will get back to you shortly.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
